[package]
name = "room"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"

[dev-dependencies]
serde_urlencoded = ''

[dependencies]
newtype = ''
newtype_derive = ''
smart-default = ''
derive_more = ''
anyhow = ''
fehler = ''
serde = ''
ron = ''
chrono = ''
geocoding = ''
itertools = ''
dirs = ''
serde_json = ''
lazy_static = ''
reqwest = ''
url = ''
map = { path = 'map' }
bytes = { version = '', features = ['serde'] }
kuchiki = ''
nom = ''

#persistentcache = ''
#persistentcache = { git = 'https://github.com/stefan-k/persistentcache-rs' }
persistentcache = { git = 'https://github.com/Matthias-Fauconneau/persistentcache-rs' }
#persistentcache = { path = '../../persistentcache' }
