[package]
name = "room"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"

[dependencies]
fehler = ''
anyhow = ''
error = { package = 'framework', git = 'https://github.com/Matthias-Fauconneau/framework' }
#error = { package = 'framework', path = '../framework' }
newtype = ''
newtype_derive = ''
smart-default = ''
derive_more = ''
itertools = ''
lazy_static = ''

nom = ''
serde = ''
ron = ''

dirs = ''
#persistentcache = ''
#persistentcache = { git = 'https://github.com/stefan-k/persistentcache-rs' }
persistentcache = { git = 'https://github.com/Matthias-Fauconneau/persistentcache-rs' }
#persistentcache = { path = '../../persistentcache' }
url = ''
reqwest = ''
client = { path = 'client' }

kuchiki = ''
chrono = ''
map = { path = 'map' }

[dev-dependencies]
serde_urlencoded = ''
