[package]
name = "client"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"

[dependencies]
fehler = ''
anyhow = ''
lazy_static = ''
dirs = ''
reqwest = ''
#static-http-cache = ''
#static-http-cache = { git = 'https://gitlab.com/Screwtapello/static_http_cache' }
#static-http-cache = { git = 'https://github.com/Matthias-Fauconneau/static-http-cache' }
static-http-cache = { path = '../../static_http_cache' }
