[package]
name = "map"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"

[dependencies]
fehler = ''
anyhow = ''
noisy_float = { version = '', features = ['serde-1'] } # why -1?
error = { package = 'framework', git = 'https://github.com/Matthias-Fauconneau/framework' }
error = { package = 'framework', path = '../../framework' }
itertools = ''

dirs = ''
serde = ''
#persistentcache = ''
#persistentcache = { git = 'https://github.com/stefan-k/persistentcache-rs' }
persistentcache = { git = 'https://github.com/Matthias-Fauconneau/persistentcache-rs' }
#persistentcache = { path = '../../persistentcache' }
client = { path = '../client' }

serde_json = ''
geo-types = { version = '', features = ['serde'] }
geocoding = ''
