[package]
name = "map"
version = "0.0.0"
authors = ["Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
edition = "2018"

[dependencies]
fehler = ''
anyhow = ''
itertools = ''
noisy_float = { version = '', features = ['serde-1'] } # why -1?
lazy_static = ''

dirs = ''
serde = ''
persistent-cache = { path = '../../persistent-cache' }
client = { path = '../client' }

serde_json = ''
geo-types = { version = '', features = ['serde'] }
geocoding = ''
